k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: josi
  labels:
    name: josi
    environment: production
